--- a/myNote.csproj
+++ b/myNote.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +79,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Img\bar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Img\plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Img\min.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Img\bar_G.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
